Fix: Locale warning resolved in LanguageManager